# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/multimedia/media_library/media_library.gni")

ohos_ndk_headers("media_asset_manager_header") {
  dest_dir = "$ndk_headers_out_dir/multimedia/media_library"
  sources = [
    "../media_asset_base_capi.h",
    "../media_asset_manager_capi.h",
  ]
}

ohos_ndk_library("libmedia_asset_manager") {
  ndk_description_file = "./lib_media_asset_namager_capi.ndk.json"
  output_name = "media_asset_manager"
  output_extension = "so"
  system_capability = "SystemCapability.FileManagement.PhotoAccessHelper.Core"
  system_capability_headers = [
    "multimedia/media_library/media_asset_manager_capi.h",
    "multimedia/media_library/media_asset_base_capi.h",
  ]
}
